# NeuroDecode-RT

./: .gitignore  README.md  pyproject.toml
docs/: ENV.md
docs/plans/: 2026-07-02-neurodecode-rt-design.md  2026-07-02-neurodecode-rt.md
examples/: streaming_demo.py  train_and_report.py
neurodecode/: bench.py  config.py  data.py  evaluate.py  model.py  quantize.py  roofline_proj.py  synth.py  train.py
tests/: test_bench.py  test_config.py  test_data.py  test_evaluate.py  test_kv_cache_equivalence.py  test_model_forward.py  test_patch_embed.py  test_quantize.py  test_roofline_proj.py  test_sliding_window.py  test_smoke.py  test_train_step.py
